--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -19,9 +19,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <!--One way to display figures side by side-->
     <style>
-    .vertical {
-            border-right: 1px solid gray;
-        }
     .figcontainer {
     display: flex;
     justify-content: center;
@@ -278,10 +275,10 @@
               <ul class="social-links">
                   <div class="footer" >
                     <li><a href="mailto:bayesplurinacional@gmail.com"><i class="fas fa-envelope"></i></a></li>
-                    <li><a href="https://twitter.com/BayesPlurinacio" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://twitter.com/BayesPlural" target="_blank"><i class="fab fa-twitter"></i></a></li>
                     <!--<li><a href="https://bayes.club/@BayesDelSur" target="_blank"><i class="fab fa-mastodon"></i></a></li>-->
                     <!--<li><a href="https://facebook.com/bayesdelsur" target="_blank"><i class="fab fa-facebook"></i></a>-->
-                    <!--<li><a href="https://instagram.com/bayesdelsur" target="_blank"><i class="fab fa-instagram"></i></a>-->
+                    <li><a href="https://instagram.com/bayesplurinacional" target="_blank"><i class="fab fa-instagram"></i></a>
                     <li><a href="https://www.linkedin.com/company/bayes-plurinacional/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                     <!--<li><a href="https://www.youtube.com/@bayesdelsur" target="_blank"><i class="fab fa-youtube"></i></a></li>-->
                   </div>
