--- a/es/redes.html
+++ b/es/redes.html
@@ -168,12 +168,12 @@
               </h5>
 
                 <ul>
-                    <li>&#x2022; Twitter: <a href="https://twitter.com/BayesPlurinacio">https://twitter.com/BayesPlurinacio</a></li>
+                    <li>&#x2022; Twitter: <a href="https://twitter.com/BayesPlural">https://twitter.com/BayesPlural</a></li>
                     <!--<li>&#x2022; Youtube: <a href="https://www.youtube.com/@bayesdelsur">https://www.youtube.com/@bayesdelsur</a></li>-->
                     <li>&#x2022; Linkedin: <a href="https://www.linkedin.com/company/bayes-plurinacional/">https://www.linkedin.com/company/bayes-plurinacional/</a></li>
                     <!--<li>&#x2022; Mastodon: <a href="https://bayes.club/@BayesDelSur">https://bayes.club/@BayesDelSur</a></li>
-                    <li>&#x2022; Facebook: <a href="https://www.facebook.com/bayesdelsur/">https://www.facebook.com/bayesdelsur/</a></li>
-                    <li>&#x2022; Instagram: <a href="https://www.instagram.com/bayesdelsur/">https://www.instagram.com/bayesdelsur/</a></li>-->
+                    <li>&#x2022; Facebook: <a href="https://www.facebook.com/bayesdelsur/">https://www.facebook.com/bayesdelsur/</a></li>-->
+                    <li>&#x2022; Instagram: <a href="https://www.instagram.com/bayesplurinacional/">https://www.instagram.com/bayesplurinacional/</a></li>
                 </ul>
                 </h6>
 
@@ -187,10 +187,10 @@
               <ul class="social-links">
                   <div class="footer" >
                     <li><a href="mailto:bayesplurinacional@gmail.com"><i class="fas fa-envelope"></i></a></li>
-                    <li><a href="https://twitter.com/BayesPlurinacio" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://twitter.com/BayesPlural" target="_blank"><i class="fab fa-twitter"></i></a></li>
                     <!--<li><a href="https://bayes.club/@BayesDelSur" target="_blank"><i class="fab fa-mastodon"></i></a></li>-->
                     <!--<li><a href="https://facebook.com/bayesdelsur" target="_blank"><i class="fab fa-facebook"></i></a>-->
-                    <!--<li><a href="https://instagram.com/bayesdelsur" target="_blank"><i class="fab fa-instagram"></i></a>-->
+                    <li><a href="https://instagram.com/bayesplurinacional" target="_blank"><i class="fab fa-instagram"></i></a>
                     <li><a href="https://www.linkedin.com/company/bayes-plurinacional/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                     <!--<li><a href="https://www.youtube.com/@bayesdelsur" target="_blank"><i class="fab fa-youtube"></i></a></li>-->
                   </div>
