--- a/es/organiza.html
+++ b/es/organiza.html
@@ -1,26 +1,5 @@
 <!DOCTYPE html>
-
-  <html>
-    <head>
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <title>Bayes</title>
-      <link rel="icon" href="logos/favicon.png" type="image/x-icon">
-      <!--Let browser know website is optimized for mobile-->
-      <link rel="stylesheet" href="css/others.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <style>
-        .column {float: left; width: 33.3%; margin-bottom: 16px; padding: 0 8px; }
-        img {float: center; width:  30%;  height: 30%; object-fit: cover; border-radius: 50%;}
-        @media screen and (max-width: 800px) { .column { width: 100%;  display: block; }}
-        a { color: inherit; } 
-        p {text-align: center;}
-      </style>
-    </head>
-
-    <body>
+<body>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -186,8 +165,8 @@
 
                 <div class="column">
                     <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
-                    <h5><p>Ariel Silvio Norberto Ramos</p></h5>
-                    <h6><p>Anfitrión 2024 Universidad Nacional de Salta</p></h6>
+                    <h5><p>Universidad Nacional de Salta</p></h5>
+                    <h6><p>Anfitrión 2024</p></h6>
                 </div>
             </div>
 
